# small_transformers

./: .gitignore  README.md  environment.yml  pyproject.toml
small_transformer/base/: base_trainer.py
small_transformer/model/: __init__.py  attention.py  encoder_decoder.py  feedforward.py  model.py  normalization.py  tokenizer.py  trainer.py
small_transformer/utils/: data_loaders.py  logger.py
tests/: test_attention.py  test_data_loaders.py  test_encoder_decoder.py  test_model.py  test_normalization.py  test_tokenizer.py
tests/resources/: test_tokenizer.model  test_tokenizer.vocab
